*SVN*

* Use 400 Bad Request status for unrescued ActiveRecord::RecordInvalid exceptions.  [Jeremy Kemper]

* Silence log_error deprecation warnings from inspecting deprecated instance variables.  [Nate Wiger]

* Only cache GET requests with a 200 OK response.  #6514, #6743 [RSL, anamba]

* Add a 'referer' attribute to TestRequest. [Jamis Buck]

* Ensure render :json => ... skips the layout.  Closes #6808 [Josh Peek]

* Fix HTML::Node to output double quotes instead of single quotes.  Closes #6845 [mitreandy]

* Correctly report which filter halted the chain.  #6699 [Martin Emde]

* Fix a bug in Routing where a parameter taken from the path of the current request could not be used as a query parameter for the next. Closes #6752. [Nicholas Seckar]

* Unrescued ActiveRecord::RecordNotFound responds with 404 instead of 500.  [Jeremy Kemper]

* Improved auto_link to match more valid urls correctly [Tobias Luetke]

* Add singleton resources. [Rick Olson]

  map.resource :account
  
  GET /account
  GET /account;edit
  UPDATE /account
  DELETE /account

* respond_to recognizes JSON. render :json => @person.to_json automatically sets the content type and takes a :callback option to specify a client-side function to call using the rendered JSON as an argument.  #4185 [Scott Raymond, eventualbuddha]
    # application/json response with body 'Element.show({:name: "David"})'
    respond_to do |format|
      format.json { render :json => { :name => "David" }.to_json, :callback => 'Element.show' }
    end

* Makes :discard_year work without breaking multi-attribute parsing in AR.  #1260, #3800 [sean@ardismg.com, jmartin@desertflood.com, stephen@touset.org, Bob Silva]

* Adds html id attribute to date helper elements.  #1050, #1382 [mortonda@dgrmm.net, David North, Bob Silva]

* Add :index and @auto_index capability to model driven date/time selects.  #847, #2655 [moriq, Doug Fales, Bob Silva]
